--- a/http_poll.conf
+++ b/http_poll.conf
@@ -30,22 +30,39 @@ filter {
 		event.set("length", event.get("body").length)
 		'
 	}
+	
+	#splity the array in body field into smaller event.
+	split {
+		field => "body"
+	}
+	
+	
 }
 output {
   if [length] > 0 {
-	#http {
-	#	url => "http://localhost:8080"
-	#	http_method => "post"
-	#	message => "{
-	#		\"start\":%{start},
-	#		\"chunk\":%{chunk}
-	#	}"
-	#}
 	
-	 file {
-	   path => "D:\Dev\logstash-7.11.0-windows-x86_64\conf\test.csv"
-	   #codec => line { format => "%{body}"}
-	 }	
+	#if([start] == 5){
+	#	csv {
+	#		path => "D:\Dev\logstash-7.11.0-windows-x86_64\conf\test.csv"
+	#		fields => []
+	#		codec => line { format => "albumId, id, title, url, thumbnailUrl"}
+	#	}
+	#} else {
+		csv {
+			path => "D:\Dev\logstash-7.11.0-windows-x86_64\conf\test.csv"
+			fields => ["[body][albumId]", "[body][id]", "[body][title]","[body][url]","[body][thumbnailUrl]"]	   
+		}
+	#}	
+	
+	http {
+		url => "http://localhost:8080"
+		http_method => "post"
+		message => "{
+			\"start\":%{start},
+			\"chunk\":%{chunk}
+		}"
+	}
+	
   }
   stdout { 
 	codec => rubydebug {
